fix horizontal scroll, on exchange for box-shadow box

--- a/css/libs-css/new-popup.css
+++ b/css/libs-css/new-popup.css
@@ -321,15 +321,27 @@
   .new-update__btn-wrapper {
     position: sticky;
     bottom: env(safe-area-inset-bottom, 20px);
-    background-color: white;
-    width: calc(100% + 26px);
+    background-color: var(--color_white);
+    /* width: calc(100% + 26px); */
     padding: 13px;
     margin-top: 0;
-    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1); */
     display: flex;
     justify-content: center;
-    transform: translateX(-13px);
+    /* transform: translateX(-13px); */
   }
+
+  /* .new-update__btn-wrapper::after {
+    content: "";
+    position: absolute;
+    top: 61px;
+    left: -13px;
+    width: calc(100% + 26px);
+    height: 20px;
+    background-color: var(--color_white);
+    box-shadow: 0px -69px 13px -7px rgba(34, 60, 80, 0.92);
+    z-index: -1;
+  } */
 
   .new-update__more {
     padding-bottom: 10px;
